# Mini-AI-Assistant

./: .dockerignore  .env.example  .env.obs  .gitignore  .pytest_out.txt  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.chroma/: chroma.sqlite3
.puku/: puku-embeddings.db  puku-embeddings.db-shm  puku-embeddings.db-wal
.puku/plans/: mini_ai_assistant_452dc972.plan.md  mini_ai_assistant_v2_f202dab9.plan.md
backend/: config.py  errors.py  locks.py  memory.py
backend/ingestion/: chunker.py  docling_pipeline.py  pipeline.py
backend/llm/: client.py  embeddings.py  prompts.py  rerank.py
backend/observability/: health.py  logging_config.py  metrics.py  redactor.py  request_context.py  tracing.py
backend/pipeline/: chat.py
data/: notes.txt  orders.json  products.json
docs/: decisions.md  runbook.md
frontend/: .env.example  .gitignore  Dockerfile  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
ops/: alerts.yaml  prometheus.yml  tempo.yaml
scripts/: _probe.py  migrate_to_chroma_cloud.py  probe_listening.ps1  smoke_anaphoric_prime.py  smoke_session_recovery.py  smoke_spa.cmd  smoke_spa_v2.cmd  verify_compile.ps1
tests/: conftest.py  test_anaphoric.py  test_chunking.py  test_error_handling.py  test_eval.py  test_health_cache.py  test_injection.py  test_locks.py  test_logging_rotation.py  test_rate_limit.py  test_redactor.py  test_sessions.py  test_tools.py  test_tracing.py
ui/: streamlit_app.py
(+24 files in other folders)
